--- a/package.json
+++ b/package.json
@@ -7,16 +7,26 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest --ui"
   },
   "dependencies": {
     "@nuxt/ui": "^3.0.0",
+    "@pinia/nuxt": "^0.10.1",
     "@tanstack/vue-query": "^5.69.0",
     "@vee-validate/nuxt": "^4.15.0",
     "@vee-validate/zod": "^4.15.0",
     "nuxt": "^3.16.1",
+    "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@nuxt/test-utils": "^3.17.2",
+    "@vitest/ui": "3.0.9",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^17.4.4",
+    "vitest": "^3.0.9"
   }
 }
