--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/vue-query": "^5.69.0",
     "@vee-validate/nuxt": "^4.15.0",
     "@vee-validate/zod": "^4.15.0",
+    "cypress": "^14.2.0",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
@@ -24,6 +25,8 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.17.2",
+    "@stryker-mutator/vitest-runner": "^8.7.1",
+    "@vitest/coverage-v8": "3.0.9",
     "@vitest/ui": "3.0.9",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^17.4.4",
